--- a/pages/adventure2.html
+++ b/pages/adventure2.html
@@ -9,7 +9,7 @@
         <header class="header">
             <div class="logo">
                 <a href="/index.html">
-                <img src="/img/logo.png-" alt="Logo">
+                <img src="/img/logo.png" alt="Logo">
                 </a>
             </div>
         </header>
